# astra-worktest

./: .gitignore  README.md  pyproject.toml  track_spending.py
code/: __init__.py  analyze_w2s_correlations.py  api_utils.py  baselines.py  dataset_utils.py  eval_utils.py  example_usage.py  models_with_example_labels.py  models_with_ground_truth_labels.py  test_api_key.py  weak_baselines.py
code/plotting_and_analysis/: plot_all_response_matching.sh  plot_all_response_matching_grid.py  plot_response_matching.py  plot_results.py
code/sweep_gt_label_counts/: plot_gt_label_count_sweep.py  sweep_number_of_gt_labels.py
code/sweep_weak_label_counts/: plot_weak_label_count_sweep.py  sweep_number_of_weak_labels.py
notebooks/: final_icl_w2s_empty.ipynb  final_icl_w2s_roy_big_copy.ipynb  investigate_truthfulqa.ipynb
results/: gold_labels_meta-llama_llama-3.1-8b-instruct_20251109_101033.json  gold_labels_meta-llama_llama-3.1-8b-instruct_20251109_101126.json  gold_sweep_20251109_110351.json  weak_labels_meta-llama_llama-3.1-8b-instruct_to_meta-llama_llama-3.1-70b-instruct_70shot_20251109_103831.json
results/baselines/: baseline_20251109_100149.json
results/data/: gold_sweep_20251109_102109.json  weak_sweep_20251109_105224.json  weak_sweep_20251109_114143.json
results/weak_labels/: baseline_20251109_103122.json  meta-llama_llama-3.1-70b-instruct_baseline.json  w2s_meta-llama_llama-3.1-70b-instruct_to_meta-llama_llama-3.1-70b-instruct_20251109_114143.json  w2s_meta-llama_llama-3.1-70b-instruct_to_qwen_qwen-2.5-72b-instruct_20251109_114143.json  (+2 more)
(+4 files in other folders)
