[project]
name = "astra-worktest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets<4",
    "ipykernel>=7.1.0",
    "safetytooling",
    "yapf>=0.43.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

[tool.uv.sources]
safetytooling = { git = "https://github.com/safety-research/safety-tooling.git", rev = "unpinned_requirements" }
